Update Tile and Header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <h1 style="background-color: red;">Hello World!</h1>
 <p>My name is sethu im from hyderbad.</p>
+<h2>This is My HOME Page</h2>
 
 </body>
 </html>
