update Contact page

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,12 @@
 <html>
 <body>
 
-<h1 style="background-color: red;">Hello World!</h1>
-<p>My name is sethu im from hyderbad.</p>
-
+<h1>
+    Profession: IT Employee
+    Contact:789456123
+    Worklocation: Hyderabad
+    place: Madhapur
+    Zipcode: 500090
+</h1>
 </body>
 </html>
