--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <tiltl>
+        <body>
+            <h1>Profession: IT Employee</h1>
+            <h2>Contact:789456123</h2>
+            <h3>Worklocation: Hyderabad</h3>
+            <h4>place: Madhapur</h4>
+            <h5>Zipcode: 500090</h5>
+            </h1>
+            </body>
+    </tiltl>
 
-<h1>
-    Profession: IT Employee
-    Contact:789456123
-    Worklocation: Hyderabad
-    place: Madhapur
-    Zipcode: 500090
-</h1>
-</body>
 </html>
