--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <tiltl>
+    <tilte>
         <body>
             <h1>Profession: IT Employee</h1>
             <h2>Contact:789456123</h2>
             <h3>Worklocation: Hyderabad</h3>
             <h4>place: Madhapur</h4>
             <h5>Zipcode: 500090</h5>
-            </h1>
-            </body>
-    </tiltl>
-
+        </body>
+    </tilte>
 </html>
